Fixed weird scroll glitch (scrollbar appearing on load for moments); fixed clipping when screen height small and content larger

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,7 +12,7 @@
 }
 
 .socialLinks {
-  margin: 0;
+  margin-top: 10px;
   padding: 0;
   list-style: none;
 }
